--- a/bai4.html
+++ b/bai4.html
@@ -83,10 +83,6 @@
             padding-top: 30px;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
-        .right{
-            width: 300px;
-            float:left;
-        }
         button{ 
             margin: 30px 30px ; padding: 2px 20px;
         }
@@ -95,8 +91,12 @@
         border-bottom: 1px solid black;
         margin: 10px;
         size: 15px;
+        width:80%;
         }
-        
+        .right{
+            width: 300px;
+            float:left;
+        }
         .border{
             height: 160px;
             width: 200px;
